kubernetes/cloud/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: opt-rag
  labels:
    app: opt-rag
    component: backend
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: opt-rag
    component: backend
  # type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service
  namespace: opt-rag
  labels:
    app: opt-rag
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opt-rag
      component: backend
  template:
    metadata:
      labels:
        app: opt-rag
        component: backend
    spec:
      containers:
      - name: backend
        image: us-central1-docker.pkg.dev/visa-llm-assistant/opt-rag-docker-repo/opt-rag-backend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "1000m"
            memory: "2.0Gi"
          limits:
            cpu: "2000m"
            memory: "4Gi"
        volumeMounts:
        - name: models-volume
          mountPath: /app/models
        - name: vector-store-volume
          mountPath: /app/vector_store
      volumes:
      - name: models-volume
        persistentVolumeClaim:
          claimName: models-pvc
      - name: vector-store-volume
        persistentVolumeClaim:
          claimName: vector-store-pvc
